# eurosys2022-cheops-compression

./: README.md
CompressionML-PyTorch/: pyproject.toml
CompressionML-PyTorch/compressionml_pytorch/: confusion.ipynb  training.ipynb  tuning.py
CompressionML-PyTorch/tests/: test_compressionml_pytorch.py
