[tool.poetry]
name = "CompressionML-PyTorch"
version = "0.1.0"
description = ""
authors = ["Julius Plehn <julius.plehn@uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
torchvision = "^0.11.1"
torchaudio = "^0.10.0"
ipykernel = "^6.6.0"
h5py = "^3.6.0"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
pandas = "^1.4.0"
ipympl = "^0.8.7"
ray = {extras = ["tune"], version = "^1.10.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
